# practicing

./: SELECT datname,.sql  config.py  database.py  fib.py  logging.ipynb  myapp.py  mylib.py  prog.py  pyproject.toml  test.ipynb
core/database/: __init__.py  base.py
core/settings/: base.py
