[project]
name = "sqlalchemy-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "numpy>=2.4.4",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.48",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "ipython>=9.12.0",
    "jupyterlab>=4.5.6",
]
